Fix mobile spacing inconsistency + grammar in French

--- a/assets/i18n/me/fr.json
+++ b/assets/i18n/me/fr.json
@@ -9,6 +9,6 @@
   "job": "étudiante en info",
   "email": "Courriel (pour des demandes personelles)",
   "form": "Formulaire de contact (pour des demandes professionelles)",
-  "languages": "J'écrit du code en",
+  "languages": "J'écris du code en",
   "projects": "Voir mes projets"
 }
