Add Spanish and improve me.floo.fi for mobile

--- a/assets/i18n/me/fr.json
+++ b/assets/i18n/me/fr.json
@@ -4,11 +4,11 @@
   "aka": "Ou Mia dans la vraie vie",
   "description": "Je conçois, écrit, teste et deploie des logiciels et modèles d'IA, gère des serveurs, apprend la tech et rêve beaucoup.",
   "pronouns": "elle",
-  "species": "lapin",
+  "species": "lapine",
   "floofi": "directrice",
   "job": "étudiante en info",
-  "email": "Courriel (pour des demandes personelles)",
-  "form": "Formulaire de contact (pour des demandes professionelles)",
+  "email": "Courriel (demandes personelles)",
+  "form": "Formulaire de contact (professionel)",
   "languages": "J'écris du code en",
   "projects": "Voir mes projets"
 }
