--- a/assets/i18n/me/es.json
+++ b/assets/i18n/me/es.json
@@ -1,7 +1,7 @@
 {
-  "title": "Judy Hopps: Programación, IA y servidores",
-  "header": "¡Hola, soy Judy!",
-  "aka": "O Mia en la vida real",
+  "title": "Starscouts: Programación, IA y servidores",
+  "header": "¡Hola, soy Starscouts!",
+  "aka": "O Judy o Mia en la vida real",
   "description": "Diseño, escribo, pruebo e implemento software y modelos de IA, administro servidores, aprendo tecnología y sueño mucho.",
   "pronouns": "ella",
   "species": "conejita",
