--- a/assets/i18n/me/pl.json
+++ b/assets/i18n/me/pl.json
@@ -1,7 +1,7 @@
 {
-  "title": "Judy Hopps: Programowanie, AI i serwery",
-  "header": "Cześć, jestem Judy.",
-  "aka": "W prawdziwym życiu znana także jako Mia",
+  "title": "Starscouts: Programowanie, AI i serwery",
+  "header": "Cześć, jestem Starscouts.",
+  "aka": "W prawdziwym życiu znana także jako Judy lub Mia",
   "description": "Projektuję, piszę, testuję i wdrażam oprogramowanie, trenuję modele AI, zarządzam serwerami, uczę się o technologii i dużo marzę.",
   "pronouns": "ona/jej",
   "species": "królik",
