--- a/assets/i18n/me/fr.json
+++ b/assets/i18n/me/fr.json
@@ -1,7 +1,7 @@
 {
-  "title": "Judy Hopps : Développement, IA et serveurs",
-  "header": "Coucou, je suis Judy.",
-  "aka": "Ou Mia dans la vraie vie",
+  "title": "Starscouts : Développement, IA et serveurs",
+  "header": "Coucou, je suis Starscouts.",
+  "aka": "Ou Judy ou Mia dans la vraie vie",
   "description": "Je conçois, écrit, teste et deploie des logiciels et modèles d'IA, gère des serveurs, apprend la tech et rêve beaucoup.",
   "pronouns": "elle",
   "species": "lapine",
