--- a/assets/i18n/me/de.json
+++ b/assets/i18n/me/de.json
@@ -1,7 +1,7 @@
 {
-  "title": "Starscouts: Programmierung, KI und Server",
-  "header": "Hallo, ich bin Starscouts.",
-  "aka": "Auch Judy oder Mia in Person.",
+  "title": "Kammy: Programmierung, KI und Server",
+  "header": "Hallo, ich bin Kammy.",
+  "aka": "Auch Starscouts",
   "description": "Ich entwickle, schreibe, prüfe und setze Software ein, trainierte KI modelle, administriere Server, lerne über Technologie und träume viel.",
   "pronouns": "sie/ihr",
   "species": "Hase",
