--- a/assets/i18n/me/ru.json
+++ b/assets/i18n/me/ru.json
@@ -1,7 +1,7 @@
 {
-  "title": "Starscouts: Программирование, ИИ и серверы",
-  "header": "Привет, я Starscouts.",
-  "aka": "Также известна как Джуди или Миа в реальности",
+  "title": "Kammy: Программирование, ИИ и серверы",
+  "header": "Привет, я Kammy.",
+  "aka": "Также известна как Starscouts",
   "description": "Я разрабатываю, пишу, тестирую и распространяю программное обеспечение, обучаю модели исскуственного интеллекта, управляю серверами, изучаю технологии и много мечтаю.",
   "pronouns": "она/её",
   "species": "кролик",
