--- a/assets/i18n/me/ua.json
+++ b/assets/i18n/me/ua.json
@@ -1,7 +1,7 @@
 {
-  "title": "Starscouts: програмування, ШІ та сервери",
-  "header": "Привіт, я Starscouts.",
-  "aka": "Також відома як Джуді або Мія у реальному житті",
+  "title": "Kammy: програмування, ШІ та сервери",
+  "header": "Привіт, я Kammy.",
+  "aka": "Також відома як Starscouts",
   "description": "Я розробляю, пишу, тестую та розповсюджую програмне забезпечення, треную моделі штучного інтелекту, керую серверами, пізнаю різні технології і багато мрію.",
   "pronouns": "вона/її",
   "species": "кролик",
