--- a/assets/i18n/me/en.json
+++ b/assets/i18n/me/en.json
@@ -1,7 +1,7 @@
 {
-  "title": "Starscouts: Programming, AI and servers",
-  "header": "Hi, I am Starscouts.",
-  "aka": "Also known as Judy or Mia in real life",
+  "title": "Kammy: Programming, AI and servers",
+  "header": "Hi, I am Kammy.",
+  "aka": "Also known as Starscouts",
   "description": "I design, write, test and deploy software, train AI models, manage servers, learn about tech and dream a lot.",
   "pronouns": "she/her",
   "species": "bunny",
