--- a/assets/i18n/me/fi.json
+++ b/assets/i18n/me/fi.json
@@ -1,7 +1,7 @@
 {
-  "title": "Starscouts: Ohjelmointi, tekoäly ja palvelimet",
-  "header": "Hei, olen Starscouts.",
-  "aka": "Tunnetaan myös Judy tai Mia tosielämässä",
+  "title": "Kammy: Ohjelmointi, tekoäly ja palvelimet",
+  "header": "Hei, olen Kammy.",
+  "aka": "Tunnetaan myös Starscouts",
   "description": "Suunnittelen, kirjoitan, testaan ja otan käyttöön ohjelmistoja, koulutan tekoälymalleja, hallinnoin palvelimia, opin tekniikasta ja haaveilen paljon.",
   "pronouns": "nainen",
   "species": "pupu",
